syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Account {
    string id = 1;
    string name = 2;
    string email = 3;
}

message CreateAccountRequest {
    string name = 1;
    string email = 2;
}

message AccountResponse {
    Account account = 1;
}

service AccountService {
    rpc CreateAccount(CreateAccountRequest) returns (Account) {}
}